<resources>
    <string name="app_name">Raktár</string>
    <string name="navigation_drawer_open">Navigáció mutatása</string>
    <string name="navigation_drawer_close">Navigáció elrejtése</string>
    <string name="nav_header_title">Raktár</string>
    <string name="nav_header_subtitle">palinkas.akos97@gmail.com</string>
    <string name="nav_header_desc">Navigáció</string>
    <string name="action_settings">Beállítások</string>
    <string name="action_save">Mentés</string>
    <string name="action_save_upper">MENTÉS</string>

    <string name="menu_home">Kezdőlap</string>
    <string name="menu_products">Termékek</string>
    <string name="menu_company">Céginformáció</string>
    <string name="supplier">Beszállító:</string>
    <string name="product_name">Termék neve</string>
    <string name="cancel">Mégse</string>
    <string name="yes">Igen</string>
    <string name="ok">OK</string>
    <string name="back_navigation_confirmation_dialog_title">Biztos benne?</string>
    <string name="back_navigation_confirmation_dialog_message">Biztos visszalép mentés nélkül?</string>

    <!-- Product Detail Fragment -->

    <string name="product_fragment">Termék</string>
    <string name="product_number_label">Cikkszám:</string>
    <string name="product_name_label">Megnevezés:</string>
    <string name="unit_label">Menny. egys.:</string>
    <string name="save_button_desc">Mentés gomb</string>
    <string name="product_information">Termék információ</string>

    <!-- Company Fragment -->
    <string name="company_name_label">Cégnév</string>
    <string name="storage_name_label">Raktár</string>
    <string name="storage_section_label">Raktárak</string>
    <string name="company_section_label">Cégadatok</string>
    <string name="company_info_new_storage_button">Új raktár létrehozása</string>
    <string name="basic_data_section_label">Adatok</string>
    <string name="save_storage_button">Raktár mentése</string>
    <string name="search_bar_hint">Keresés...</string>
    <string name="new_product">ÚJ TERMÉK</string>
    <string name="new_storage_upper">ÚJ RAKTÁR</string>
    <string name="qtt_label">Mennyiség:</string>
    <string name="product_label">Termék:</string>
    <string name="storage_in_button">BETÁROLÁS</string>
    <string name="storage_out_button">KITÁROLÁS</string>

</resources>