<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.palinkas.raktar.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_storageInFragment"
            app:destination="@id/storageInFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_products"
        android:name="com.palinkas.raktar.ui.product.ProductListFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_product_list">
        <action
            android:id="@+id/action_nav_products_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_company"
        android:name="com.palinkas.raktar.ui.company.CompanyFragment"
        android:label="@string/menu_company"
        tools:layout="@layout/fragment_company" >
        <action
            android:id="@+id/action_nav_company_to_storageFragment"
            app:destination="@id/storageFragment" />
    </fragment>
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.palinkas.raktar.ui.product_detail.ProductDetailFragment"
        android:label="@string/product_fragment"
        tools:layout="@layout/fragment_product_detail">
        <argument
            android:name="productId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/storageFragment"
        android:name="com.palinkas.raktar.ui.company.StorageFragment"
        android:label="StorageFragment"
        tools:layout="@layout/fragment_storage"/>
    <fragment
        android:id="@+id/storageInFragment"
        android:name="com.palinkas.raktar.ui.storageIn.StorageInFragment"
        android:label="StorageInFragment"
        tools:layout="@layout/fragment_storage_in"/>
</navigation>