<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.palinkas.raktar.ui.product_detail.ProductDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.Raktar"
        android:padding="8dp">

        <TextView
            android:id="@+id/product_number_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/product_number_edit_text"
            android:text="@string/product_number_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_vertical"/>

        <EditText
            android:id="@+id/product_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="20sp"
            android:text="@={vm.product.productNumber}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_number_label"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/product_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/product_name_edit_text"
            android:text="@string/product_name_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_number_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical" />

        <EditText
            android:id="@+id/product_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="20sp"
            android:text="@={vm.product.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_name_label" />

        <TextView
            android:id="@+id/unit_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/unit_edit_text"
            android:text="@string/unit_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_name_edit_text"
            android:gravity="center_vertical"/>

        <EditText
            android:id="@+id/unit_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="20sp"
            android:text="@={vm.product.unitId}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unit_label" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/ic_baseline_save_48"
            android:text="@string/action_save_upper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:focusable="true"
            android:contentDescription="@string/save_button_desc" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>